--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.1.4"
+    "@astrojs/node": "^9.0.0",
+    "@auth/core": "^0.37.4",
+    "@auth/drizzle-adapter": "^1.7.4",
+    "@libsql/client": "^0.14.0",
+    "astro": "^5.1.4",
+    "auth-astro": "^4.2.0",
+    "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.38.3"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.30.1"
   }
 }
