--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "drizzle-migrate": "drizzle-kit migrate"
   },
   "dependencies": {
-    "@astrojs/node": "^9.0.0",
+    "@astrojs/mdx": "^4.0.7",
+    "@astrojs/node": "^9.0.2",
     "@auth/core": "^0.37.4",
     "@auth/drizzle-adapter": "^1.7.4",
     "@libsql/client": "^0.14.0",
-    "astro": "^5.1.4",
+    "astro": "^5.1.10",
     "auth-astro": "^4.2.0",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3"
